// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignInPageView renders with an error 1`] = `
<div
  className="app-background"
>
  <a
    href="/"
    onClick={[Function]}
  >
    back
  </a>
  <h1>
    Let's get you signed up
  </h1>
  <form
    onSubmit={[Function]}
  >
    <input
      name="email"
      onChange={[Function]}
      placeholder="Email Address"
      type="text"
      value="info@test.com"
    />
    <input
      name="passwordOne"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value="123abc"
    />
    <input
      name="passwordTwo"
      onChange={[Function]}
      placeholder="Confirm Password"
      type="password"
      value="123abc"
    />
    <button
      disabled={false}
      type="submit"
    >
      Sign Up
    </button>
    <p>
      some error
    </p>
  </form>
  <p>
    Already have an account? 
    <a
      href="/signin"
      onClick={[Function]}
    >
      Sign In
    </a>
  </p>
</div>
`;

exports[`SignInPageView renders with some data 1`] = `
<div
  className="app-background"
>
  <a
    href="/"
    onClick={[Function]}
  >
    back
  </a>
  <h1>
    Let's get you signed up
  </h1>
  <form
    onSubmit={[Function]}
  >
    <input
      name="email"
      onChange={[Function]}
      placeholder="Email Address"
      type="text"
      value="info@test.com"
    />
    <input
      name="passwordOne"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value="123abc"
    />
    <input
      name="passwordTwo"
      onChange={[Function]}
      placeholder="Confirm Password"
      type="password"
      value="123abc"
    />
    <button
      disabled={false}
      type="submit"
    >
      Sign Up
    </button>
  </form>
  <p>
    Already have an account? 
    <a
      href="/signin"
      onClick={[Function]}
    >
      Sign In
    </a>
  </p>
</div>
`;
